adds the heatmap section

--- a/index.html
+++ b/index.html
@@ -87,6 +87,19 @@
     </form>
     <ul id="habit-list" draggable="false"></ul>
 
+    <section id="heatmap">
+        <h2>📆 Yearly Progress</h2>
+        <div class="heatmap-grid"></div>
+      </section>
+      <div class="heatmap-legend">
+        <span>Less</span>
+        <div class="legend-color" style="background-color: #E0E0E0;"></div>
+        <div class="legend-color" style="background-color: #A7F3D0;"></div>
+        <div class="legend-color" style="background-color: #6EE7B7;"></div>
+        <div class="legend-color" style="background-color: #34D399;"></div>
+        <div class="legend-color" style="background-color: #059669;"></div>
+        <span>More</span>
+      </div>
     </div> 
     </div>
 </body>
