adds the progress heatmap

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css"/>
     <title>Habit Log</title>
@@ -56,7 +57,7 @@
               <button class="collapse-toggle">Settings ▾</button>
               <div class="sidebar-section">
                 <button onclick="showStats()">📊 Stats</button>
-                <button onclick="toggleTheme()">🌓 Theme</button>
+                <button onclick="applySavedTheme()">🌓 Theme</button>
               </div>
             </div>
             <div class="badges-section">
